# mwenglish

./: .env  Cargo.toml  README.md  english.sql
migrations/2019-06-26-084651_create_table/: down.sql  up.sql
src/: main.rs  router.rs
src/api/: user.rs
src/authentication/: check_login.rs  mod.rs  vaptcha.rs
src/crypt/: aes.rs  mod.rs  rsa.rs
src/db/: mod.rs
src/model/: user.rs
src/share/: common.rs  error.rs  mod.rs  schema.rs
src/utils/: mod.rs
webapp/: package-lock.json  package.json
webapp/public/: index.html
webapp/src/: App.vue  router.js  store.js
webapp/src/assets/: api.js  crypto.js
webapp/src/views/: LogReg.vue
