[package]
name = "mwenglish"
version = "0.1.0"
authors = ["Starccy <452276725@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.3"
actix-web = "1.0.2"
dotenv = "0.14.1"
env_logger = "0.6.1"
num_cpus = "1.10.1"
r2d2 = "0.8.5"
serde = "1.0.93"
serde_json = "1.0.39"
serde_derive = "1.0.93"
features = "0.10.0"

[dependencies.diesel]
version = "1.4.2"
features = ["mysql", "chrono", "serde_json", "r2d2", "numeric"]

[dependencies.bigdecimal]
version = "*"
features = ["serde"]

[dependencies.chrono]
version = "0.4.7"
features = ["serde"]