[package]
name = "mwenglish"
version = "0.1.0"
authors = ["Starccy <452276725@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.3"
actix-web = "1.0.2"
actix-service = "0.4.1"
dotenv = "0.14.1"
env_logger = "0.6.1"
num_cpus = "1.10.1"
serde = "1.0.93"
serde_json = "1.0.39"
serde_derive = "1.0.93"
futures = "0.1.28"
openssl = "0.10.23"
base64 = "0.10.1"
rand = "0.7.0-pre.1"
rust-crypto = "0.2.36"
uuid = {version = "0.7.4", features = ["v4"]}
pyo3 = "0.7.0"
actix-cors = "0.1.0"
regex = "1.1.7"
actix-redis = { git="https://github.com/actix/actix-redis.git" }
actix = "0.8.3"
redis-async = "0.4.5"
lazy_static = "1.3.0"
derive_more = "0.15.0"
actix-http = "*"
json = "0.11.14"

[dependencies.diesel]
version = "1.4.2"
features = ["mysql", "chrono", "serde_json", "r2d2", "numeric"]

[dependencies.bigdecimal]
version = "*"
features = ["serde"]

[dependencies.chrono]
version = "0.4.7"
features = ["serde"]